--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -1,13 +1,15 @@
 ---
 const { title = 'Welcome, world!', slug, className, imgsrc } = Astro.props;
+import { Image } from "astro:assets"
 ---
 
 <!-- Store the message prop as a data attribute. -->
 <astro-greet data-message={title} data-slug={slug}>
-  <a class={` ${className}`}>
-    <img  src={imgsrc} alt={title}  title={title} />
+  <button class={`no-bg ${className}`}>
+    <!-- <Image src={imgsrc} alt={title}  title={title} width={500} height={230} format="avif" ></Image> -->
+    <img  src={imgsrc} alt={title}  title={title} class="" />
     <h4 class="title">{title}</h4>  
-  </a>
+  </button>
 </astro-greet>
 
 
@@ -20,7 +22,7 @@ const { title = 'Welcome, world!', slug, className, imgsrc } = Astro.props;
       // Read the message from the data attribute.
       const title = this.dataset.title;
       const slug = this.dataset.slug;
-      const button = this.querySelector('a');
+      const button = this.querySelector('button');
 
         // Get the modal
         var modal = document.getElementById(slug);
