--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -6,7 +6,6 @@ import HomeHeroSection from '../components/sections/heros/HomeHeroSection.astro'
 import { getCollection } from 'astro:content';
 import FormattedDate from '../components/FormattedDate.astro';
 import CustomModal from '../components/Modal.astro';
-import { Image } from "astro:assets"
 
 
 const posts_blog = (await getCollection('blog')).sort(
@@ -19,96 +18,8 @@ const posts_project = (await getCollection('project'))
 ---
 
 
-<Layout title="t2del" meta_description="t2del - meta description" body_class="home index something you wish to add for any use">
-	<HomeHeroSection />
-		<section class="hide">
-			<Container className="custom-class">			
-				<ul role="list" class="link-card-grid notshow blur">
-					<Card
-						href="#"
-						title="Documentation"
-						body="Learn how Astro works and explore the official API docs."
-					
-					/>
-					<Card
-						href="#"
-						title="Integrations"
-						body="Supercharge your project with new frameworks and libraries."
-					
-					/>
-					<Card
-						href="#"
-						title="Themes"
-						body="Explore a galaxy of community-built starter themes."
-						
-					/>
-					<Card
-						href="#"
-						title="Community"
-						body="Come say hi to our amazing Discord community. ❤️"
-					/>
-				</ul>
-			</Container>
-		</section>
-
-		<section id="about">
-			<Container className="custom-class">
-				<h2 class="notshow fromleft">About <span class="text-gradient">T2del</span></h2>
-	
-				<div class="link-card-grid">
-					<div class="photo">
-						<Image src="https://t2del.github.io/images/den.jpg" width={400} height={400} format='webp' alt={'Dennis Macapagal'} class:list={'profile-photo'}></Image>
-					</div>
-					<div class="description">
-						<p>
-							A <code>Full-Stack</code> Developer with more than 10 years of relevant experience in web programming. Bringing up-to-date industry skills in front-end and back-end technology such as PHP, HTML, CSS, JavaScript, MySQL and hands-on experience with CMS such as WordPress. Detail-oriented and motivated to drive project completion on target with exceptional quality and guaranteed client satisfaction.
-						</p>
-						<ul class="list-unstyled list-boxed" id="skills-list">
-							<li>PHP</li>
-							<li>HTML</li>
-							<li>CSS</li>
-							<li>JavaScript (jQuery, Ajax, Json)</li>
-							<li>Bootstrap</li>
-							<li>Sass / Less</li>
-							<li> WordPress/ Woocommerce</li>
-							<li>MySQL</li>
-							<li>OpenCart</li>
-							<li>Laravel</li>
-							<li>RestAPI</li>
-							<li>GIT</li>
-							<li><a href="https://astro.build/">Astro.Build</a></li>
-						</ul>
-					</div>
-					
-				</div>
-						
-			</Container>
-		</section>
-
-		<section>
-			<Container className="custom-class">
-				<h2 class="notshow fromleft"> <span class="text-gradient">Blog</span></h2>
-				<ul role="list" class="link-card-grid">
-					{
-						posts_blog.map((post) => (
-							<li class="notshow fromtop">
-								<a href={`/t2delastro/blog/${post.slug}/`}>
-									<img  src={post.data.heroImage} alt={post.data.imgalt} title={post.data.imgalt} />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-								
-							</li>
-							
-						))
-					}
-				</ul>				
-			</Container>			
-		</section>
-		
-		<section id="portfolio">			
+<Layout title="Portfolio | t2del" meta_description="Portfolio | t2del - meta description" body_class="portfolio index something you wish to add for any use">
+		<section>			
 			<Container className="custom-class">
 				<h2 class="notshow fromleft"> <span class="text-gradient">Portfolio</span></h2>
 				<ul role="list" class="link-card-grid">
@@ -123,7 +34,8 @@ const posts_project = (await getCollection('project'))
 				{
 					posts_project.map((post) => (
 						<div id={post.slug} class="modal">						
-							<div class="modal-content">								
+							<div class="modal-content">
+								
 								<p>{post.data.title}</p>
 								<div class="modal-grid">
 									<div class="description">
