--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -3,44 +3,42 @@ import { Icon } from 'astro-icon'
 const { navData, rightMenu } = Astro.props;
 import Container from '../../components/Container.astro';
 ---
-<script type="module">
-  const bodyElement = document.querySelector('body');
-  const menuButton = document.querySelector('#menuButton')
-  const navHeader = document.querySelector('#t2delHeader');
-  const menuButtonIconHam = document.querySelector('#menuButtonIconHam');
-  const menuButtonIconClose = document.querySelector('#menuButtonIconClose');
-  let scrollPosition = 0;
+<script type="module" >
+  document.addEventListener('astro:page-load', () => {
+    const bodyElement = document.querySelector('body');
+    const menuButton = document.querySelector('#menuButton')
+    const navHeader = document.querySelector('#t2delHeader');
+    const menuButtonIconHam = document.querySelector('#menuButtonIconHam');
+    const menuButtonIconClose = document.querySelector('#menuButtonIconClose');
 
-  menuButton.addEventListener('click', toggleMenu)
+    menuButton.addEventListener('click', toggleMenu);
+    function toggleMenu() {
+      menuButtonIconHam.toggleAttribute('hidden');
+      menuButtonIconClose.toggleAttribute('hidden');
+      navHeader.toggleAttribute('mobile-menu-open');
+    }
+    const scrollingElement = document.querySelector('header');
 
-  function toggleMenu() {
-    menuButtonIconHam.toggleAttribute('hidden');
-    menuButtonIconClose.toggleAttribute('hidden');
-    navHeader.toggleAttribute('mobile-menu-open');
-  }
-
-  const scrollingElement = document.querySelector('header');
-
-	window.addEventListener('scroll', () => {
-		const scrollPercentage = (window.scrollY / (document.body.scrollHeight - window.innerHeight)) * 100;
-		if (scrollPercentage > 1) {
-			scrollingElement.classList.add("white-bg"); // Red background
-		} else {
-			scrollingElement.classList.remove("white-bg");; // Default background
-		}
-	});
-  const obeserver = new IntersectionObserver((entries) => {
-		entries.forEach((entry) => {
-			if(entry.isIntersecting) {
-				entry.target.classList.add('show');
-			} else {
-				entry.target.classList.remove('show');
-			}
-		});
-	});
-	const hiddenElements = document.querySelectorAll('.notshow');
-	hiddenElements.forEach((el) => obeserver.observe(el));
-
+    window.addEventListener('scroll', () => {
+      const scrollPercentage = (window.scrollY / (document.body.scrollHeight - window.innerHeight)) * 100;
+      if (scrollPercentage > 1) {
+        scrollingElement.classList.add("white-bg"); // White background
+      } else {
+        scrollingElement.classList.remove("white-bg");; // Default background
+      }
+    });
+    const obeserver = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if(entry.isIntersecting) {
+          entry.target.classList.add('show');
+        } else {
+          entry.target.classList.remove('show');
+        }
+      });
+    });
+    const hiddenElements = document.querySelectorAll('.notshow');
+    hiddenElements.forEach((el) => obeserver.observe(el));
+  }, );
   
 </script>  
 
