--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-
-
 import '../styles/index.css';
 
 import BaseHead from '../components/head/BaseHead.astro';
@@ -8,11 +6,7 @@ import { nav } from '../config/nav.js';
 import Header from '../components/head/Header.astro';
 import Footer from '../components/head/Footer.astro';
 import Logo from '../components/Logo.astro';
-
-
-// import 'bootstrap/dist/css/bootstrap.min.css';
-
-
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 	meta_description: string;
@@ -25,8 +19,9 @@ const { title, meta_description, body_class } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={meta_description} />
+				
 	</head>
-	
+	<ViewTransitions></ViewTransitions>
 	<body class={body_class}>
 		<Header rightMenu navData={nav} id="navID" slot="header">
 			<span slot="logo">
