minor transition added

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -10,9 +10,15 @@
 		font-family: var(--theme-font-family-serif);
     	font-size: var(--font-size-md);
 		color: inherit;
+		background-image: linear-gradient(90deg, #00000080, #00000080);
+		background-size: 0 3px;
+		background-position: left bottom;
+		transition: background-size 100ms ease-in;
+		background-repeat: no-repeat;
 	}
 	.logo:hover {
-		text-decoration: underline;
+		/* text-decoration: underline; */
+		background-size: 100%  3px;
 		cursor: pointer;
 	}
 </style>
