--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -5,6 +5,7 @@ import Container from '../../components/Container.astro';
 ---
 <script type="module" >
   document.addEventListener('astro:page-load', () => {
+    // put all javascript here
     const bodyElement = document.querySelector('body');
     const menuButton = document.querySelector('#menuButton')
     const navHeader = document.querySelector('#t2delHeader');
@@ -38,8 +39,7 @@ import Container from '../../components/Container.astro';
     });
     const hiddenElements = document.querySelectorAll('.notshow');
     hiddenElements.forEach((el) => obeserver.observe(el));
-  }, );
-  
+  }, );  
 </script>  
 
 <header id="t2delHeader" class={`${rightMenu ? "header--right" : ``.trim()}`}>
