--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -1,14 +1,14 @@
 ---
-const { title = 'Welcome, world!', slug, className, imgsrc } = Astro.props;
+const { title = 'Welcome, world!', slug, classContainer = '', classText = '', imgsrc = '' } = Astro.props;
 
 ---
 
 <!-- Store the message prop as a data attribute. -->
 <astro-greet data-message={title} data-slug={slug}>
-  <button class={`no-bg ${className}`}>
+  <button class={`btn-modal ${classContainer}`}>
 
     <img  src={imgsrc} alt={title}  title={title} class="" />
-    <h4 class="title">{title}</h4>  
+    <h4 class={`title ${classText}`}>{title}</h4>  
   </button>
 </astro-greet>
 
@@ -41,3 +41,19 @@ const { title = 'Welcome, world!', slug, className, imgsrc } = Astro.props;
   customElements.define('astro-greet', AstroGreet);
 </script>
 
+<style>
+  .btn-modal {
+    text-align: left;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .btn-modal img {
+    aspect-ratio: 8 / 4;
+  }
+  .btn-modal h4 {
+    display: inline;
+    margin: 10px;
+  }
+</style>
