--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -140,6 +140,7 @@ footer {
 	border-radius: 50%;
 	box-shadow: 0px 0px 15px 1px grey;
 	margin: 0 auto;
+	height: auto;
 }
 .list-unstyled {
 	padding-left: 0;
