--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -228,3 +228,40 @@ footer {
 .portfolio-list:nth-child(24) {
     transition-delay: 2400ms;
 }
+
+
+
+.modal {
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 0; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	opacity: 0;
+	transition: opacity 300ms ease-in;
+}
+
+.modal.modalshow {
+	opacity: 1;
+	width: 100%;
+}
+
+/* Modal Content/Box */
+.modal-content {
+	background-color: #fefefe;
+	padding: 20px;
+	box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
+	max-width: 650px;
+	position: absolute;
+	left: 50%;
+	top: 30%;
+	transform: translate(-50%,-50%);
+	transition: all 200ms ease-in;
+}
+.modal.modalshow .modal-content {
+	top: 50%;
+}
