added ga tracking code in viewtransition

--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -47,6 +47,11 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-<!-- paste GA4 Tracking here -->
 
-<!-- paste GA4 Tracking here -->
+<script type="module" >
+	document.addEventListener('astro:page-load', () => {
+		// <!-- paste GA4 Tracking here -->
+
+		// <!-- paste GA4 Tracking here -->
+	}, ); 
+</script>
