--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,10 +1,32 @@
 header {
+	position: fixed;
+	z-index: 9;
+	transition: all 300ms;
+	top: 0;
+  width: 100%;
+  padding: 1rem 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.10);
+}
+header.white-bg {
+  background-color: #fff !important;
+	  background: #fff !important;
+	  color: #000;	
+    box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.5);
+} 
+header .content__container {
+	display: flex;
     width: 100%;
-    padding: 1rem 0.5rem;
-    display: flex;
     justify-content: space-between;
-    align-items: center;
-  }
+}
+
+header .content__container .header-logo-menu__container {
+	display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
   header.header--right {
     display: grid;
     grid-template-columns: 1fr auto auto;
