added submenu in header nav

--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -62,13 +62,27 @@ import Container from '../../components/Container.astro';
   </div>
   <div class="header-nav__container">
     <slot name="nav">
-      {navData && <nav>
-        <ul>
-          {navData.map(navItem => (
-            (<li><a href={navItem.slug} >{navItem.title}</a></li>)
-          ))}
-        </ul>
-      </nav>}
+      {navData && (
+        <nav>
+          <ul>
+            {navData.map(navItem => (
+              <li className={navItem.submenu ? 'has-submenu' : ''}>
+                <a href={navItem.slug}>{navItem.title}</a>
+                {navItem.submenu && (
+                  <ul class="sub-menu ">
+                    {navItem.submenu.map(submenuItem => (
+                      <li>
+                        <a href={submenuItem.slug}>{submenuItem.title}</a>
+                      </li>
+                    ))}
+                  </ul>
+                )}
+              </li>
+            ))}
+          </ul>
+        </nav>
+      )}
+      
     </slot>
   </div>
   <div class="header-action-item__container hide">
