--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -77,6 +77,27 @@ header .content__container .header-logo-menu__container {
   nav ul li a:hover {
     opacity: 1;
   }
+  nav ul li.has-submenu {
+    position: relative;
+  }
+  nav ul li.has-submenu .sub-menu {
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    height: 0;
+    transition: all 300ms ease-in;
+    position: absolute;
+    min-width: 180px;
+    background-color:  #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+    box-shadow: 0px 0px 5px 0px #ccc;
+    left: -50%;
+  }
+  nav ul li.has-submenu:hover .sub-menu  {
+    height: auto;
+    opacity: 1;
+  }
   @media(max-width: 991px) {
     #menuButton {
       display: block;  
