minor styling changes

--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -49,6 +49,11 @@ const { title = 'Welcome, world!', slug, classContainer = '', classText = '', im
     flex-direction: column;
     gap: 10px;
     width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    border: none;
+    box-shadow: 1px 1px 5px 1px #00000080;
+    cursor: pointer;
   }
   .btn-modal img {
     /* aspect-ratio: 8 / 4; */
