--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,18 +14,18 @@ import { Debug } from 'astro:components';
 	const posts_blog = (await getCollection('blog'))
 	.filter(post => post.data.status == 'active') // Filter out active posts
   	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
+	
+	
 	const posts_project = (await getCollection('project'))
-	//.filter(post => post.data.status == 'active') // Filter out active posts
-	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
-
+	.filter(post => post.data.status == 'active') // Filter out active posts
+	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse();
 
 	const posts_project_featured = (await getCollection('project'))
 	.filter(post => post.data.status == 'featured') // Filter out active posts
-	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
-	//const fhggroup = await getEntry('project', 'fullertonhealthgroup');	
+	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());	
 ---
 
-<!-- <Debug {posts_project_featured} /> -->
+<!-- <Debug {posts_project} /> -->
 <Layout title="t2del" meta_description="t2del - meta description" body_class="home index something you wish to add for any use">
 	<HomeHeroSection />
 		<section class="hide">
@@ -158,60 +158,3 @@ import { Debug } from 'astro:components';
 			}					
 		</section>	
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		max-width: calc(100% - 2rem);
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h2 {
-		font-size: 3em;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: #00000080;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}	
-</style>
