--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,29 +5,15 @@ import { getCollection } from 'astro:content';
 
 import FormattedDate from '../components/FormattedDate.astro';
 // import { Debug } from 'astro:components';
-
-// const posts = await Astro.glob('../content/blog/*.md'); // returns an array of posts that live at ./src/content/blog/*.md
 const posts_blog = (await getCollection('blog'))
 	.filter(post => post.data.status == 'active') // Filter out active posts
-  	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
-
+  	.sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()).reverse();
 ---
 
-<!-- <Debug {posts} /> -->
 <Layout title="Blog | t2del" meta_description="Blog | My Blog" body_class="blog index something you wish to add for any use">
 	<section>
 		<Container className="custom-class">
 			<h2 class="notshow fromleft"> <span class="text-gradient">Blog</span></h2>
-			<!-- <ul role="list" class="link-card-grid">
-				{posts.slice(0, 4).map((post) => (
-					<article>
-					  <h2>{post.frontmatter.title}</h2>
-					  <p>{post.frontmatter.description}</p>
-					  <a href={post.url}>Read more</a>
-					</article>
-				  ))}
-			</ul> -->
-
 			<ul role="list" class="link-card-grid">
 				{
 					posts_blog.map((post) => (
@@ -48,60 +34,3 @@ const posts_blog = (await getCollection('blog'))
 		</Container>			
 	</section>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		max-width: calc(100% - 2rem);
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h2 {
-		font-size: 3em;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: #00000080;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}	
-</style>
