--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@ header {
 	transition: all 300ms;
 	top: 0;
   width: 100%;
-  padding: 1rem 0.5rem;
+  padding: 10px 10px;
   justify-content: space-between;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.10);
@@ -16,15 +16,19 @@ header.white-bg {
     box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.5);
 } 
 header .content__container {
-	display: flex;
+	  display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: baseline;
 }
 
 header .content__container .header-logo-menu__container {
 	display: flex;
     width: 100%;
     justify-content: space-between;
+}
+header .content__container.container-header{
+  padding: 10px 10px;
 }
 
   header.header--right {
