--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -26,7 +26,7 @@
 	--theme-grid-gap: 1rem;
 	--container-max-width: 1440px;
 	--container-max-width-narrow: 960px;
-	--container-padding: 0 1rem;
+	--container-padding: 60px 1rem;
 
 	--theme-blog-post-header-width: 1200px;
 
